--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    
     <title>Document</title>
   </head>
   <body>
-    <script src="stats.js"></script>
     <div class="contacts">
       <div class="stickyHeader">0</div>
+      <script src="contacts.js"></script>
+      <script async src="stats.js"></script>
     </div>
-    <script src="contacts.js"></script>
   </body>
 </html>
